tests/invalid/break_outside_loop.prsm
// E031: 'break' used outside of a loop body
component BreakOutsideLoop : MonoBehaviour {
    func handleInput() {
        break
    }
}
